tests/snapshots/run_wpt_conformance__onnx_add_float16_broadcast_4D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float16 broadcast 4D to 4D",
    "onnx",
    "PASS",
)
