tests/snapshots/run_wpt_conformance__onnx_add_float32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 4D tensors",
    "onnx",
    "PASS",
)
